--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "generate": "split-guide generate",
     "browsersync": "browser-sync start --server \"./exercises-final/exercise-01\" --files \"templates/**/*.css\"",
     "server": "./scripts/server.js",
-    "format": "prettier --write \"**/*.{js,css,md}\""
+    "format": "prettier --write \"**/*.{js,css,md}\"",
+    "split-guide": "split-guide generate"
   },
   "repository": {
     "type": "git",
